[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://www.google.co.in/imgres?imgurl=http%3A%2F%2Fmedia1.santabanta.com%2Ffull1%2FCars%2FLamborghini%2Flamborghini-174a.jpg&imgrefurl=http%3A%2F%2Fwww.santabanta.com%2Fwallpapers%2Flamborghini%2F%3Fpage%3D2&docid=YoVZX1xDcL4WJM&tbnid=5b09WECSQYjY_M%3A&vet=10ahUKEwjD3srdtL7VAhXJKY8KHdGIA84QMwjuASgRMBE..i&w=1024&h=768&bih=823&biw=1160&q=lamborghini%20pics&ved=0ahUKEwjD3srdtL7VAhXJKY8KHdGIA84QMwjuASgRMBE&iact=mrc&uact=8"/>
+            <img src="http://media1.santabanta.com/full1/Cars/Lamborghini/lamborghini-174a.jpg
+            "/>
         </div>
         <br>
         <div class="center text-big bold">
