[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="center">
             <img src="http://media1.santabanta.com/full1/Cars/Lamborghini/lamborghini-174a.jpg
-            "width=100/>
+            "width=300 height=200/>
         </div>
         <br>
         <div class="center text-big bold">
