--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div class="center">
-            <img src="http://media1.santabanta.com/full1/Cars/Lamborghini/lamborghini-174a.jpg
-            "width=300 height=200/>
+            <img src="http://media1.santabanta.com/full1/Cars/Lamborghini/lamborghini-174a.jpg"
+            width=300 height=200/>
         </div>
         <br>
         <div class="center text-big bold">
