[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="http://media1.santabanta.com/full1/Cars/Lamborghini/lamborghini-174a.jpg" align=center width=200 height=300
+            <img src="http://media1.santabanta.com/full1/Cars/Lamborghini/lamborghini-174a.jpg" align=centre width=200 height=300
             />
         </div>
         <br>
